--- a/static/styles.css
+++ b/static/styles.css
@@ -9,7 +9,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    background-color: #f1f1f1;
+    background-color: #922929;
     border-bottom: 1px solid #ccc;
 }
 
